Version 0.10.7 (legolas558)
* fixed a couple of navigation bugs (reported by deroock)
* fixed bug with non-overwritten pages being reported as not imported
* implementation of javascript security settings upon import
* implementation of macro pluggable syntax (based on FBNil's work)
* fixed many old syntax parsing bugs

Version 0.10.6 (legolas558) released 2010-03-02
* fixed XHTML tags corruption issue (reported by littlegirl)

Version 0.10.5 (legolas558) released 2010-03-01
* fixed various syntax bugs in lists, headers and templates parsing
* minor fixes for Chrome
* unified progress status indicators
* fixed import/export feature on Opera browsers
* fixed tags negation bug (found by littlegirl)
* major improvements for Opera support
* minor fixes for other browsers (IE)

Version 0.10.4 (legolas558) released 2010-02-14
* fixed export issue of images (found by D.Strohmayer)
* fixed encryption dialog UI issue (found by M.Ellison)
* fixed encryption pages issues (found by D.De Roock)
* fixed UTF8 encoding/decoding issues
* some CSS improvements

Version 0.10.3 (legolas558) released 2010-02-12
* fixed embedding/import issues with FF3
* fixed some WSIF import issues

Version 0.10.2 (legolas558) released 2010-02-09
* WSIF 1.1.0 format support (import/export)
* other UI improvements/minor bugfixes

Version 0.10.1 (legolas558) released 2010-02-02
* major API1.0 improvements
* fixed file embedding bugs
* fixed file deletion bugs
* fixed tagging bugs
* support for WSIF export and native WSIF (not yet documented)

Version 0.10.0 (legolas558) released 2010-01-31
* fixed XHTML export feature
* fixed tags recognition
* added some core i18n language resources
* general loop optimizations
* re-enabled fix for search focus bug
* added sample WoaS logo to default Main Page
* moved set key menu icon to left of edit menu icon
* incremented text returned in search results
* fixed Special::Dead pages listing which did not show all pages
* added last modified timestamp to all pages